# rpi-mediaplay

./: pyproject.toml  ruff.toml
apps/rpi-backup/: pyproject.toml
apps/rpi-backup/src/: .gitignore  config.py  constants.py  generate_ssh_keys.py
apps/rpi-backup/src/config/: settings.toml
apps/rpi-backup/src/domain/: __init__.py
apps/rpi-backup/src/domain/ssh/: __init__.py  schemas.py
apps/rpi-backup/src/gen_ssh/: __init__.py  __main__.py  constants.py  main.py
apps/rpi-backup/src/gen_ssh/domain/: __init__.py
apps/rpi-backup/src/gen_ssh/domain/sshkey/: __init__.py  schemas.py
apps/rpi-backup/src/gen_ssh/utils/: __init__.py
apps/rpi-backup/src/gen_ssh/utils/rand_utils/: __init__.py  operations.py
apps/rpi-backup/src/provides/: __init__.py
apps/rpi-backup/src/provides/conf/: __init__.py  settings.py
apps/rpi-backup/src/provides/exc/: __init__.py  value_err.py
apps/rpi-backup/src/provides/utils/: __init__.py
apps/rpi-backup/src/provides/utils/debug_utils/: operations.py
apps/rpi-backup/src/provides/utils/path_utils/: __init__.py  operations.py
apps/rpi-backup/src/provides/utils/sshlib/: __init__.py  operations.py
apps/rpi-backup/src/provides/utils/time_utils/: __init__.py  operations.py
apps/rpi-backup/src/rpi_backup/: main.py
apps/rpi-backup/src/rpi_backup/utils/: __init__.py
apps/rpi-backup/src/targets/: example.json
apps/rpi-backup/src/utils/: __init__.py
apps/rpi-backup/src/utils/debug_utils/: __init__.py
apps/rpi-backup/src/utils/sshlib/: __init__.py  operations.py
(+2 files in other folders)
